<resources>
    <string name="app_name">Dasalt</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_account">Don\'t have an account? Sign Up</string>
    <string name="next">Next</string>
    <string name="phone">Phone Number</string>
    <string name="otp">Enter OTP</string>
    <string name="generate">Generate OTP</string>
    <string name="register">Verify &amp; Register</string>
    <string name="sign_in">Log In</string>
    <string name="password">Password</string>
    <string name="name">Username</string>
    <string name="resendotp">Resend OTP</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setting">Settings</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>

    <!--Finger print-->
    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
