<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="500dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="213dp"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/dasalt" />

            <EditText
                android:id="@+id/input_user"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/input_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input_confirm_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/SlateGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>