<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="20dp">


            <ImageView
                android:layout_width="213dp"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/dasalt" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textStyle="bold"
                android:background="@drawable/edit_text_style"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:background="@drawable/edit_text_style"
                android:textStyle="bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/SlateGrey"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">


                <TextView android:id="@+id/link_register"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="180dp"
                    android:text="@string/new_account"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/NeonBlue"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>

</RelativeLayout>